--- a/configs/Driver.config
+++ b/configs/Driver.config
@@ -1,4 +1,4 @@
-## File System Drivers
+  ## File System Drivers
 CONFIG_PACKAGE_kmod-fs-f2fs=y
 CONFIG_PACKAGE_kmod-fs-nfs=y
 CONFIG_PACKAGE_kmod-fs-nfs-common=y
@@ -82,3 +82,7 @@ CONFIG_PACKAGE_smartdns=y
 ## Python
 #CONFIG_PACKAGE_python-pip-conf=y
 #CONFIG_PACKAGE_python3=y
+
+## apk
+CONFIG_PACKAGE_apk-mbedtls=y
+CONFIG_PACKAGE_apk-openssl=y
